# zapper.cloud

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
crates/zap-cli/: Cargo.toml
crates/zap-cli/src/: lib.rs
crates/zap-core/: Cargo.toml
crates/zap-core/src/: error.rs  lib.rs  node.rs  protocol.rs  tests.rs  ticket.rs  transfer.rs
crates/zap-web/: Cargo.toml
crates/zap-web/src/: lib.rs  server.rs
src/: main.rs
