[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["cdjk"]

[workspace.dependencies]
# Core
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rand = "0.9"
shellexpand = "3"

# Web
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }

# Internal
zap-core = { path = "crates/zap-core" }
zap-cli = { path = "crates/zap-cli" }
zap-web = { path = "crates/zap-web" }

[package]
name = "zap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
zap-cli = { workspace = true }
zap-web = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["cli", "web"]
cli = []
web = []
