[package]
name = "zap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iroh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = "0.9"
data-encoding = "2"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
