[package]
name = "zap-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zap-core = { workspace = true }
iroh = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
rand = "0.9"
